--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/drupal8_parallax_theme": "^2.0",
+        "drupal/google_analytics": "2.5",
         "drupal/vani": "1.2"
     },
     "conflict": {
