--- a/.gitignore
+++ b/.gitignore
@@ -3,47 +3,48 @@
 # earlier versions of Drupal are tracked in `community/PHP/`
 
 # Ignore configuration files that may contain sensitive information
-/sites/*/*settings*.php
-/sites/*/*services*.yml
+web/sites/*/*settings*.php
+web/sites/*/*services*.yml
 
 # Ignore paths that may contain user-generated content
-/web/sites/*/files
-/web/sites/*/public
-/web/sites/*/private
-/web/sites/*/files-public
-/web/sites/*/files-private
+web/sites/default/files
+web/sites/*/files
+web/sites/*/public
+web/sites/*/private
+web/sites/*/files-public
+web/sites/*/files-private
 
 # Ignore paths that may contain temporary files
-/web/sites/*/translations
-/web/sites/*/tmp
-/web/sites/*/cache
+web/sites/*/translations
+web/sites/*/tmp
+web/sites/*/cache
 
 # Ignore testing related files
-/web/sites/simpletest
+web/sites/simpletest
 
 # Ignore drupal core (if not versioning drupal sources)
-#/web/core
-/web/modules/README.txt
-/web/profiles/README.txt
-/web/sites/README.txt
-/web/sites/example.sites.php
-/web/sites/example.settings.local.php
-/web/sites/development.services.yml
-/web/themes/README.txt
-/vendor
-/.csslintrc
-/.editorconfig
-/.eslintignore
-/.eslintrc.json
-/.gitattributes
-/.htaccess
-/autoload.php
-/composer.json
-/composer.lock
-/example.gitignore
-/index.php
-/LICENSE.txt
-/README.txt
-/robots.txt
-/update.php
-/web.config
+#web/core
+web/modules/README.txt
+web/profiles/README.txt
+web/sites/README.txt
+web/sites/example.sites.php
+web/sites/example.settings.local.php
+web/sites/development.services.yml
+web/themes/README.txt
+#/vendor
+#/.csslintrc
+#/.editorconfig
+#/.eslintignore
+#/.eslintrc.json
+#/.gitattributes
+#/.htaccess
+#/autoload.php
+#composer.json
+#composer.lock
+#/example.gitignore
+#/index.php
+#/LICENSE.txt
+#/README.txt
+#/robots.txt
+#/update.php
+#/web.config
